--- a/style.css
+++ b/style.css
@@ -28,9 +28,12 @@ img {
 }
 
 .description {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
     margin: 8px;
-    height: 64px;
-    overflow: scroll;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .price {
